tests/golden/manifests-advanced.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: nginx:1.25
          lifecycle:
            preStop:
              httpGet:
                path: /shutdown
                port: null
          name: hello
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /etc/app
              name: app-config
              readOnly: true
            - mountPath: /etc/secret
              name: app-secret
              readOnly: true
            - mountPath: /data
              name: data-pvc
              readOnly: false
            - mountPath: /tmp
              name: emptydir-tmp
              readOnly: false
      volumes:
        - configMap:
            name: app-config
          name: app-config
        - name: app-secret
          secret:
            secretName: app-secret
        - name: data-pvc
          persistentVolumeClaim:
            claimName: data-pvc
        - emptyDir:
            medium: Memory
          name: emptydir-tmp
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
