tests/golden/manifests-aiven.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    aiven: enabled
  name: aiven-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      aiven: enabled
      app: aiven-demo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        aiven: enabled
        app: aiven-demo
    spec:
      containers:
        - image: nginx:1.25
          name: aiven-demo
          ports:
            - containerPort: 8080
              name: http

---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    aiven: enabled
  name: aiven-demo
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    aiven: enabled
    app: aiven-demo
  type: ClusterIP
