tests/golden/manifests-cabundle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: cabundle
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cabundle
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cabundle
    spec:
      containers:
        - env:
            - name: NAV_TRUSTSTORE_PATH
              value: /etc/ssl/certs/java/cacerts
            - name: NAV_TRUSTSTORE_PASSWORD
              value: changeme
            - name: NODE_EXTRA_CA_CERTS
              value: /etc/pki/tls/certs/ca-bundle.crt
          image: nginx:1.25
          name: cabundle
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /etc/ssl/certs/java/cacerts
              name: ca-bundle-jks
              readOnly: true
              subPath: ca-bundle.jks
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca-bundle-pem
              readOnly: true
              subPath: ca-bundle.pem
            - mountPath: /etc/pki/tls/certs/ca-bundle.crt
              name: ca-bundle-pem
              readOnly: true
              subPath: ca-bundle.pem
            - mountPath: /etc/ssl/ca-bundle.pem
              name: ca-bundle-pem
              readOnly: true
              subPath: ca-bundle.pem
            - mountPath: /etc/pki/tls/cacert.pem
              name: ca-bundle-pem
              readOnly: true
              subPath: ca-bundle.pem
            - mountPath: /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
              name: ca-bundle-pem
              readOnly: true
              subPath: ca-bundle.pem
      volumes:
        - configMap:
            name: ca-bundle-jks
          name: ca-bundle-jks
        - configMap:
            name: ca-bundle-pem
          name: ca-bundle-pem
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: cabundle
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: cabundle
  type: ClusterIP
