tests/golden/manifests-gcp-buckets-iam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: gcp-iam
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcp-iam
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gcp-iam
    spec:
      containers:
        - image: nginx:1.25
          name: gcp-iam
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: gcp-iam
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: gcp-iam
  type: ClusterIP
