tests/golden/manifests-hpa-advanced.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: hpa-advanced
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-advanced
  template:
    metadata:
      labels:
        app: hpa-advanced
    spec:
      containers:
        - image: nginx:1.25
          name: hpa-advanced
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: hpa-advanced
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: hpa-advanced
  type: ClusterIP
