tests/golden/manifests-maskinporten.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: maskin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maskin
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: maskin
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: maskinporten-maskin
          image: nginx:1.25
          name: maskin
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: maskin
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: maskin
  type: ClusterIP
