tests/golden/manifests-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: pgdemo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgdemo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pgdemo
    spec:
      containers:
        - env:
            - name: PGHOST
              value: pgdemo-pooler.pg-default
            - name: PGPORT
              value: "5432"
            - name: PGDATABASE
              value: app
            - name: PGUSER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: app-owner-user.pgdemo.credentials.postgresql.acid.zalan.do
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: app-owner-user.pgdemo.credentials.postgresql.acid.zalan.do
            - name: PGURL
              value: postgresql://$(PGUSER):$(PGPASSWORD)@pgdemo-pooler.pg-default:5432/app
            - name: PGJDBCURL
              value: jdbc:postgresql://pgdemo-pooler.pg-default:5432/app?user=$(PGUSER)&password=$(PGPASSWORD)
          image: nginx:1.25
          name: pgdemo
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: pgdemo
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: pgdemo
  type: ClusterIP
