tests/golden/manifests-securelogs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    secure-logs: enabled
  name: securelogs-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securelogs-app
      secure-logs: enabled
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: securelogs-app
        secure-logs: enabled
    spec:
      containers:
        - image: nginx:1.25
          name: securelogs-app
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /secure-logs
              name: secure-logs
      volumes:
        - emptyDir:
            sizeLimit: 128M
          name: secure-logs
        - configMap:
            defaultMode: 420
            name: secure-logs-fluentbit
          name: secure-logs-config
        - emptyDir: {}
          name: secure-logs-positiondb
        - emptyDir: {}
          name: secure-logs-buffers
        - emptyDir: {}
          name: writable-tmp
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: securelogs-app
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: securelogs-app
  type: ClusterIP
