tests/golden/manifests-texas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    otel: enabled
    texas: enabled
  name: texas
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: texas
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: texas
        otel: enabled
        texas: enabled
    spec:
      containers:
        - env:
            - name: NAIS_TOKEN_ENDPOINT
              value: http://127.0.0.1:7164/api/v1/token
            - name: NAIS_TOKEN_EXCHANGE_ENDPOINT
              value: http://127.0.0.1:7164/api/v1/token/exchange
            - name: NAIS_TOKEN_INTROSPECTION_ENDPOINT
              value: http://127.0.0.1:7164/api/v1/introspect
          image: nginx:1.25
          name: texas
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: texas
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: texas
  type: ClusterIP
