tests/golden/manifests-vault-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: vault-basic
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-basic
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vault-basic
    spec:
      containers:
        - image: nginx:1.25
          name: vault-basic
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: vault-basic
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: vault-basic
  type: ClusterIP
