tests/golden/manifests-vault-paths.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: vault-paths
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-paths
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vault-paths
    spec:
      containers:
        - image: nginx:1.25
          name: vault-paths
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: vault-paths
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: vault-paths
  type: ClusterIP
