tests/golden/manifests-idporten.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    idporten: enabled
    otel: enabled
    wonderwall: enabled
  name: idporten
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idporten
      idporten: enabled
      otel: enabled
      wonderwall: enabled
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: idporten
        idporten: enabled
        otel: enabled
        wonderwall: enabled
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: idporten-sso
          image: nginx:1.25
          name: idporten
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: idporten
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: idporten
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: idporten
  namespace: default
spec:
  rules:
    - host: idporten.local
      http:
        paths:
          - backend:
              service:
                name: idporten
                port:
                  number: 80
            path: /
            pathType: Prefix
