tests/golden/manifests-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    otel: enabled
    wonderwall: enabled
  name: login
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: login
        otel: enabled
        wonderwall: enabled
    spec:
      containers:
        - image: nginx:1.25
          name: login
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: login
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: login
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: login
  namespace: default
spec:
  rules:
    - host: login.local
      http:
        paths:
          - backend:
              service:
                name: login
                port:
                  number: 80
            path: /
            pathType: Prefix
