tests/golden/manifests-module-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - env:
            - name: FOO
              value: bar
          image: nginx:1.25
          name: hello
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  rules:
    - host: hello.local
      http:
        paths:
          - backend:
              service:
                name: hello
                port:
                  number: 80
            path: /
            pathType: Prefix
